<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>LotroMaestro</groupId>
	<artifactId>LotroMaestro</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	</properties>
	<build>
		<sourceDirectory>src</sourceDirectory>
		<resources>
			<resource>
				<directory>src</directory>
				<excludes>
					<exclude>**/*.java</exclude>
				</excludes>
			</resource>
		</resources>
		<plugins>
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.1</version>
				<configuration>
					<source>17</source>
					<target>17</target>
				</configuration>
			</plugin>
		</plugins>
	</build>
	<repositories>
		<repository>
			<id>beatunes</id>
			<name>beaTunes Repository</name>
			<url>https://www.beatunes.com/repo/maven2</url>
		</repository>
	</repositories>
	<dependencies>
		<dependency>
			<groupId>jakarta.xml.bind</groupId>
			<artifactId>jakarta.xml.bind-api</artifactId>
			<version>3.0.0</version>
		</dependency>
		<dependency>
			<groupId>org.tritonus</groupId>
			<artifactId>tritonus_share</artifactId>
			<version>20041204</version>
		</dependency>
		<dependency>
			<groupId>javazoom.vorbisspi</groupId>
			<artifactId>vorbisspi</artifactId>
			<version>1.0.3</version>
		</dependency>
		<dependency>
			<groupId>org.jcraft</groupId>
			<artifactId>jorbis</artifactId>
			<version>0.0.17</version>
		</dependency>
		<dependency>
			<groupId>com.jcraft</groupId>
			<artifactId>jogg</artifactId>
			<version>0.0.7</version>
		</dependency>
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-math3</artifactId>
			<version>3.6.1</version>
		</dependency>
		<dependency>
			<groupId>com.formdev</groupId>
			<artifactId>flatlaf</artifactId>
			<version>3.1.1</version>
		</dependency>
		<dependency>
			<groupId>info.clearthought</groupId>
			<artifactId>table-layout</artifactId>
			<version>4.3.0</version>
		</dependency>
	</dependencies>
</project>